<resources>
  <string name="app_name">Client Manager</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_client"></string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="phone_number">Phone Number</string>
  <string name="date_of_birth">Date of Birth</string>
  <string name="zip_code">Zip Code</string>
  <string name="save">SAVE</string>
  <string name="action_delete">Delete</string>
  <string name="title_main">Client Manager</string>
  <string name="title_add_client">New Client</string>
  <string name="title_call">CALL</string>
  <string name="error_already_exists">A client with that phone number already exists.</string>
</resources>
